# hiroyukilint

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ----.md  --.md
.github/workflows/: ci-releaser.yml
example/: blacklists  sample.txt
src/: cli.yml  hiroyuki.rs  main.rs  util.rs
