[package]
name = "hiroyukilint"
version = "0.1.0"
authors = ["jiko21 <daikikojima0531@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features=["yaml"]}
exitcode = "1.1.2"
regex = "1.5.5"
